--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,14 @@
     <link rel="icon" sizes="152x152" type="image/png" href="{{site.baseurl}}/assets/images/favicon152x152.png">
     <link rel="icon" sizes="32x32" type="image/png" href="{{site.baseurl}}/assets/images/favicon32x32.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 {% include google.html %}
 <body>
