--- a/_layouts/single_page.html
+++ b/_layouts/single_page.html
@@ -5,7 +5,7 @@
 
     <div id="singlePost">
         <h1>{{page.title}}</h1>
-        <p>{{page.content}}</p>
+        {{page.content}}
     </div>
     
     {% include footer.html %}
