images and responsivness

--- a/_layouts/single_post.html
+++ b/_layouts/single_post.html
@@ -29,6 +29,7 @@
 {% endif %}
 
 <script src="{{ '/assets/js/toc-highlight.js' | relative_url }}"></script> 
+<script src="{{ '/assets/js/lightbox.js' | relative_url }}"></script>
    <script>
        // Function to update the loader bar
        function updateLoaderBar() {
