lightbox scroll revision

--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -18,7 +18,9 @@
 <!-- Lightbox Overlay -->
 <div id="{{ include.id }}-lightbox" class="lightbox" style="display:none;">
   <span class="lightbox-close material-symbols-outlined" id="{{ include.id }}-close">close</span>
-  <img class ="lightbox-img" src="{{ include.full }}" alt="{{ include.alt | default: '' }}">
+
+  <!-- NEW WRAPPER -->
+  <div class="zoom-wrapper">
+    <img class="lightbox-img" src="{{ include.full }}" alt="{{ include.alt | default: '' }}">
+  </div>
 </div>
-
-
