--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -129,10 +129,10 @@ html {
 /* #container:has(#singlePost) {
    overflow-x: hidden;
 } */
-/* 
+
 body {
    overflow-x: hidden;
-} */
+} 
 
 /* width */
 ::-webkit-scrollbar {
@@ -273,12 +273,11 @@ strong {
 
 
 
-
 .full-width-section {
-    margin: 0px -2000px;
-    padding: 0px 2000px;
-    background: var(--white);  
+  margin: 0px -2000px;
+  padding: 0px 2000px;
   margin-bottom: 4rem;
+   background: var(--white);  
   margin-top: 3rem;
   padding-top: 1rem;
   padding-bottom: 3.5rem;
@@ -1089,10 +1088,13 @@ ul li {
   .footer-content {
     padding: 2rem 48px 3rem;
   }
+   body {overflow-x: hidden; }
 }
 
 @media only screen and (max-width: 828px) {
-  
+     
+  body {overflow-x: hidden; }
+
  .lightbox img {
     width: 100vw !important;
     height: auto;
