--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -1,5 +1,5 @@
 <figure>
-  <img src="{{ include.thumb }}"
+  <img class ="thumbnail" src="{{ include.thumb }}"
        width="{{ include.thumb_width | default: '780' }}"
        alt="{{ include.alt | default: '' }}"
        id="{{ include.id }}-thumb"
