--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1584,17 +1584,36 @@ div[id]{
   margin-bottom: 0.5rem;
 }
 @media (max-width: 828px) {
-  .card {
+
+  .overview-width {
+    position: relative;
+    left: 50%;
+    right: 50%;
+    width: 100vw;
+    margin-left: -50vw;
+    margin-right: -50vw;
+
+    padding: 2rem 1.5rem;
+    box-sizing: border-box;
+    border-radius: 0;
+  }
+
+  .full-width-section {
+  position: relative;
+  left: 50%;
+  right: 50%;
+  width: 100vw;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  padding: 2rem 1.5rem; 
+  box-sizing: border-box;
+}
+
+    .card {
     flex: 1 1 calc(50% - 20px); /* 2 columns */
   }
-  .overview-width {
-    width: 100vw;
-    margin: 0;
-    padding: 2rem 1rem;
-    box-sizing: border-box;
-    overflow-x: auto;
-  }
 }
+
  @media (max-width: 530px) {
   .card {
     flex: 1 1 100%; /* Stack cards vertically */
