--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -274,14 +274,31 @@ strong {
 
 
 .full-width-section {
-  margin: 0px -2000px;
+  /* margin: 0px -2000px;
   padding: 0px 2000px;
   margin-bottom: 4rem;
    background: var(--white);  
   margin-top: 3rem;
   padding-top: 1rem;
-  padding-bottom: 3.5rem;
+  padding-bottom: 3.5rem; */}
+
+  .full-width-breakout {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  background: var(--white);
 }
+
+.full-width-section {
+  max-width: 780px;
+  margin: 0 auto;
+  padding: 2rem 0;
+  box-sizing: border-box;
+}
+
 
 
 
@@ -1116,14 +1133,18 @@ ul li {
   padding-bottom: 3.5rem; */
   /* overflow-x: hidden; */
   }
-  
+  .full-width-breakout {
+    padding: 0 1.5rem;
+  }
   .full-width-section {
-  margin-left: -100vw;
+  /* margin-left: -100vw;
   margin-right: -100vw;
   margin-bottom: 4rem;
   margin-top: 3rem;
   padding-left: 100vw;
-  padding-right: 100vw;
+  padding-right: 100vw; */
+
+
   /* position: relative;
   left: 50%;
   right: 50%;
