--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -124,7 +124,8 @@ html {
   background-color: var(--background-color);
   /* background: url(../images/pattern.png) repeat;*/
   background-size: 60px;
-  overflow: clip;;
+  width: 100%;
+  max-width: 100vw;
 }
 /* #container:has(#singlePost) {
    overflow-x: hidden;
@@ -1108,6 +1109,12 @@ ul li {
    body {overflow-x: hidden; }
 }
 
+
+.lightbox-img,
+.custom-table-wrapper {
+  max-width: 100vw;
+}
+
 @media only screen and (max-width: 828px) {
  
   /* Card mobile styles */
@@ -1174,14 +1181,12 @@ ul li {
   .overview-width,
   .full-width-section,
   .highlighted.project-overview {
-    width: 100vw;
-    margin-left: -24px;
-    margin-right: -24px;
-    padding-left: 24px;
-    padding-right: 24px;
-    border-radius: 0;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 2rem 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow-x: auto;
   }
 
   .overview-width * {
@@ -1619,7 +1624,8 @@ div[id]{
   gap: 1rem;
   max-width: 780px;
   margin: 0 auto 2rem;
-  overflow: clip;
+  width: 100%;
+max-width: 100vw;
 }
 
 .card {
