--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -3,7 +3,8 @@
        width="{{ include.thumb_width | default: '780' }}"
        alt="{{ include.alt | default: '' }}"
        id="{{ include.id }}-thumb"
-       style="cursor: zoom-in;">
+       style="cursor: zoom-in;"
+       loading="lazy">
 
   {% if include.caption %}
     <figcaption>
