--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,17 +13,32 @@
   --overview-font: #720026;
   --highlighted-stroke:#F7E9F5;
   --step-text-color: #7F8A86;
-  --header-background: #F2F2F2;
+  --header-background: #F7F7F7;
 
   --step-padding: 8rem 0 8rem 0;
   --section-padding: 7rem 0 7rem 0;
-  --large-space: 7rem;
+
+  --large-space: 5rem;
+  --medium-space:3rem;
+  --small-space:1.5rem;
+  --xsmall-space:1rem;
 
   --shadow-elevation:rgba(0, 0, 0, 0.04) 0px 3px 5px;
 
 }
 
-
+.l-space {
+  padding: var(--large-space) 0;
+}
+.m-space {
+  padding: var(--medium-space) 0;
+}
+.s-space {
+  padding: var(--small-space) 0;
+}
+.xs-space {
+  padding: var(--xsmall-space) 0;
+}
 *,
 *:before,
 *:after {
@@ -142,6 +157,7 @@ h1 {
   line-height: 3.25rem;
   font-family: var(--primary-font), sans-serif;
   font-weight: 900;
+  margin-top: 1rem;
 }
 
 h2 {
@@ -149,7 +165,7 @@ h2 {
   line-height: 2.625rem;
   font-family: var(--primary-font), sans-serif;
   font-weight: 900;
-  margin: 4rem 0 1rem;
+  margin: 2.5rem 0 1rem;
   /* margin-block-start: 0; /* or adjust as needed */
   /* margin-block-end: 1rem; */ 
 }
@@ -158,6 +174,8 @@ h3 {
   font-size: 1.5rem;
   font-family: var(--primary-font), sans-serif;
   line-height: 2rem;
+  margin-bottom: 0;
+  padding-top:2rem;
 }
 
 h4 {
@@ -178,6 +196,7 @@ h5 {
 p.description {
   border-left: 2px solid var(--primary-color);
   padding-left: 2rem;
+  /* margin: 1rem 0; */
   text-indent: 0 !important;
 }
 
@@ -192,7 +211,7 @@ figcaption a {
 }
 
 p {
-  margin: 1rem 0;
+  /* padding: 1rem 0; */
 }
 
 .singlePage_bottom {
@@ -211,13 +230,13 @@ strong {
 .project-overview {
   text-indent: 0 !important;
   padding: 2.5rem 1.75rem;
-  margin: 3rem 0;
+  margin: 2rem 0 5rem 0;
   border-radius: 1rem;
 }
 
 .project-overview h4 {
   color: var(--overview-font);
-  margin: 0 0 0.2rem 0;
+  margin: 0 0 0.3rem 0;
 }
 
 .project-overview p {
@@ -229,7 +248,7 @@ strong {
 
 .project-overview.two-column {
   display: flex;
-  gap: 1.5rem;
+  gap: 3rem;
   flex-wrap: wrap;
 }
 .overview-item .metrics {
@@ -313,8 +332,9 @@ figure {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin: 1rem 0 3rem;
+  margin: 2rem 0 3rem;
   text-align: center;
+  border-radius: 8px;
 }
 
 .video-container {
@@ -516,6 +536,7 @@ textarea {
 img {
   height: 100%;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 
@@ -829,6 +850,10 @@ line-height: 2rem;
   font-style: italic;
 }
 
+.callout.message + .callout.message {
+  padding-top: 0;
+}
+
 .callout::before {
   content: "";
   min-width: 2rem;
@@ -932,6 +957,10 @@ footer h2 {
   opacity: 1;
 }
 
+#design {
+  padding-top:5rem;
+}
+
 ol,
 ul {
   padding-inline-start: 1.5rem;
@@ -1008,7 +1037,9 @@ ul li {
 
 
 
-/* Blockquote */
+/* 
+
+*/
 
 blockquote {
        
@@ -1021,8 +1052,8 @@ blockquote {
   margin-inline-end:0;
   margin-inline-start:0;
   position: relative;
-  margin-top: 2.5rem;
-  margin-bottom:6rem;
+  margin: 2.5rem 0;
+  /* margin-bottom:6rem; */
 
 }
 .last-step {
@@ -1115,14 +1146,15 @@ blockquote .bold {
   max-width: 780px;
   margin: 0 auto 2rem;
   width: 100%;
-max-width: 100vw;
+  max-width: 100vw;
 }
 
 .card {
   border-radius: 20px;
   box-shadow: var(--shadow-elevation);
   border: 1px solid var(--header-background);
-  padding: 1.25rem;
+  /* padding: 1.25rem; */
+  padding: 1rem;
   flex: 1 1 calc(33% - 20px);
   box-sizing: border-box;
 }
@@ -1131,15 +1163,16 @@ max-width: 100vw;
   display: flex;
   gap: 0.5rem;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 6px;
   padding: 10px;
   margin-bottom: 1.5rem;;
 }
 
 .card-header h3  {
-  margin: 0;
+  padding-top:0;
   font-size: 1rem;
   line-height: 1.5rem;
+  margin:0;
 }
 
 .subheader {
@@ -1148,6 +1181,7 @@ max-width: 100vw;
   font-weight: 500;
   line-height: 1rem;
   margin-top: 0px;
+  letter-spacing: 0.1px;
 }
 
 .material-symbols-outlined.card-icon {
@@ -1169,10 +1203,10 @@ padding-left: 1rem; */
 }
 
 .card-list li {
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.1rem;
   list-style-type: none;
   position: relative;
-  padding-left: 0.5rem;
+  padding-left: 0.1rem;
    font-size: 18px;
   line-height: 1.5rem;
 
@@ -1193,11 +1227,13 @@ padding-left: 1rem; */
   margin-bottom: 0;
 }
 
+
 /* Table styling */
 .custom-table-wrapper {
   overflow-x: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  padding: 2rem 0;
 }
 .custom-table-wrapper::-webkit-scrollbar {
   display: none;
@@ -1492,7 +1528,7 @@ color: var(--primary-color);
   max-width: 780px;
   margin-left: auto;
   margin-right: auto;
-  padding: 4rem 0;
+  /* padding: 4rem 0; */
   box-sizing: border-box;
 }
 
